# MO2

./: .gitignore  .mcp.json  CLAUDE.md  CLAUDE.md.old  CMakeLists.txt  CSOPESY_OS_Emulator_Slides.tex  combined_code_fast.txt  config.txt  config_task4_fixed.txt  config_vmstat_test.txt  crash_input_wait.txt  csopesy-backing-store.txt  run_crash.sh  test_commands.txt  test_commands_long.txt  test_crash.sh  test_script.sh  test_task5.sh
include/: combined_source_hpp.txt  combined_sourcehpp.txt  commands.hpp  config.hpp  cpu_worker.h  dispatcher.hpp  instruction_evaluator.hpp  instruction_generator.hpp  instruction_parser.hpp  memory_manager.hpp  parser.hpp  process_control_block.hpp  scheduler.hpp  screen.hpp  thread_safe_queue.hpp
src/: combined_source.txt  combined_sourcelatestcpp1.txt  commands.cpp  config.cpp  cpu_worker.cc  cpu_worker.cpp  dispatcher.cpp  instruction_evaluator.cpp  instruction_generator.cpp  instruction_parser.cpp  main.cpp  memory_manager.cpp  one.txt  parser.cpp  process_control_block.cpp  scheduler.cpp  screen.cpp
test/: main.cpp  pcb.cpp  pcb.hpp  pcb_test
